Restored to 'f4f126aec7ba772a2dd6419a07d3dffe6b7644cf'
Replit-Restored-To: f4f126aec7ba772a2dd6419a07d3dffe6b7644cf

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,10 @@
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TaskMaster - Project Management App</title>
+  <title>MyAngularProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A comprehensive task management application built with Angular">
-  <meta name="keywords" content="task management, productivity, angular, project management">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
