--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   <meta name="description" content="A comprehensive financial management system for member deposits, loans, and financial reporting">
   <meta name="keywords" content="financial management, deposits, loans, banking, angular, financial reports">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
